# PXTOOL

./: .gitignore  CMakeLists.txt  DSView.icns  PXTOOL_MCP_Test_Guide_zh.md  PXTOOL_User_Manual_en.md  PXTOOL_User_Manual_zh.md  README.md  applogo.rc  cmake_clear  mac_appbundle_template.plist.in  spi.dylib
.agents/skills/karpathy-guidelines/: SKILL.md
.cursor/rules/: dsview-relaunch-after-edit.mdc
CMake/: CopyOptionalDir.cmake
DSView/: DSView.qrc  DSView.qrc.depends  config.h  main.cpp  mystyle.h  stylesheet.qss
DSView/languages/: language.qrc.depends  zh_CN.qm  zh_CN.ts  zh_TW.qm  zh_TW.ts
DSView/pv/: appcontrol.cpp  log.cpp  mainframe.cpp  mainwindow.cpp  mainwindow.h  sessioncallback.cpp  sigsession.cpp  sigsession.h  storesession.cpp  winnativewidget.cpp  winnativewidget.h
DSView/pv/config/: appconfig.cpp  appconfig.h
DSView/pv/data/: decoderstack.cpp  decoderstack.h  glitchfilter.cpp  glitchfilter.h  logicsnapshot.cpp  logicsnapshot.h  spillmanager.cpp  spillmanager.h
DSView/pv/dialogs/: about.cpp  applicationpardlg.cpp  calibration.cpp  decoderoptionsdlg.cpp  deviceoptions.cpp  diskcachedialog.cpp  dsdialog.cpp  dsdialog.h  dsmessagebox.cpp  dsmessagebox.h  dsomeasure.cpp  fftoptions.cpp  interval.cpp  lissajousoptions.cpp  mathoptions.cpp  protocolexp.cpp  protocollist.cpp  regionoptions.cpp  search.cpp  search.h  shortcutdlg.h  storeprogress.cpp  waitingdialog.cpp
DSView/pv/dock/: deviceoptionsdock.cpp  deviceoptionsdock.h  dsotriggerdock.cpp  glitchfilterdock.cpp  glitchfilterdock.h  keywordlineedit.cpp  logdock.cpp  logdock.h  logsearch.cpp  measuredock.cpp  measuredock.h  protocoldock.cpp  protocoldock.h  protocolitemlayer.cpp  searchcombobox.cpp  searchcombobox.h  searchdock.cpp  searchdock.h  sidebar.cpp  sidebar.h  triggerdock.cpp
DSView/pv/prop/: enum.cpp
DSView/pv/toolbars/: filebar.cpp  logobar.cpp  logobar.h  samplingbar.cpp  samplingbar.h  titlebar.cpp  titlebar.h  trigbar.cpp
DSView/pv/ui/: dscombobox.cpp  dscombobox.h  fn.cpp  fn.h  langresource.h  msgbox.cpp  popupdlglist.cpp  string_ids.h  xtoolbutton.cpp
DSView/pv/utility/: diskcachesettings.h  path.cpp
DSView/pv/view/: decodetrace.cpp  decodetrace.h  devmode.cpp  dsosignal.cpp  header.cpp  header.h  lissajoustrace.cpp  logicsignal.cpp  ruler.cpp  spectrumtrace.cpp  trace.cpp  trace.h  verticalscrollbar.cpp  verticalscrollbar.h  view.cpp  view.h  viewport.cpp  viewport.h  viewstatus.cpp  waveformscrollbar.cpp  waveformscrollbar.h
DSView/pv/widgets/: searchedgeflagedit.h
DSView/test/: CMakeLists.txt  test_diskcachesettings.cpp  test_logsearch.cpp
DSView/themes/: dark.qss  light.qss
PXTOOL/: DSView.desktop  PXTOOL.desktop  PXTOOL.qrc  PXTOOL.qrc.depends  application.cpp  application.h  config.h  main.cpp  mystyle.h
PXTOOL/languages/: language.qrc  zh_CN.qm  zh_CN.ts  zh_TW.qm  zh_TW.ts
PXTOOL/pv/: ZipMaker.cpp  ZipMaker.h  appcontrol.cpp  appcontrol.h  deviceagent.cpp  deviceagent.h  dstimer.cpp  dstimer.h  dsvdef.cpp  dsvdef.h  eventobject.cpp  eventobject.h  log.cpp  log.h  mainframe.cpp  mainframe.h  mainwindow.cpp  mainwindow.h  sessioncallback.cpp  sessioncallback.h  sigsession.cpp  sigsession.h  storesession.h  winnativewidget.cpp  winnativewidget.h  winshadow.cpp  winshadow.h
PXTOOL/pv/api/: app_service.cpp  app_service.h  iapp_service.h  isession_service.h  mcp_transport.cpp  rpc_dispatcher.cpp  rpc_dispatcher.h  session_service.cpp  session_service.h  transport.h
PXTOOL/test/: CMakeLists.txt  test.cpp  test_logsearch.cpp  test_theme.cpp
PXTOOL/themes/: atom.json  ayu.json  breeze.qrc  dark.qss  dark_cards.json  light.qss  light_cards.json  theme.qss
build.rename-check/: CMakeCache.txt
common/: ds_types.h
common/log/: xlog.c  xlog.h
docs/: fix-session-switch-waveform-blank.md  parallel-decoder-threading.md  pxlogic-buffer-sample-rate-reference.md
lang/tw/: dlg.json  dsl_channel.json  dsl_label.json  dsl_list.json  msg.json  toolbar.json
libsigrok/: backend.c  config.h  hwdriver.c  lib_main.c  libsigrok-internal.h  log.c  log.h
libsigrok4DSL/: backend.c  lib_main.c  libsigrok.h
libsigrokdecode/: .gitignore  c_decoder_api.c  config.h  decoder.c  dll_registry.c  dll_registry.h  instance.c  libsigrokdecode-internal.h  libsigrokdecode.h  log.c  log.h  module_sigrokdecode.c  session.c  type_decoder.c  version.h
libsigrokdecode/c_decoders/: 4b5b_c.c  a7105_c.c  ac97_c.c  ad5593r_c.c  ad5626_c.c  ad79x0_c.c  adat_c.c  adb_c.c  ade77xx_c.c  adf435x_c.c  adns5020_c.c  adxl345_c.c  afsk_c.c  am230x_c.c  amulet_ascii_c.c  arm_etmv3_c.c  arm_itm_c.c  arm_tpiu_c.c  arp_c.c  as5047_c.c  atsha204a_c.c  aud_c.c  avclan_c.c  avr_isp_c.c  avr_pdi_c.c  bean_c.c  bh1750_c.c  bluetooth_h4_c.c  boost_c.c  c2_c.c  c_decoder_utils.h  caliper_c.c  can_c.c  can_fd_c.c  carrera_c.c  cc1101_c.c  ccd_c.c  cec_c.c  cfp_c.c  cjtag_c.c  (+176 more)
libsigrokdecode/decoders/: subfolders_list.txt  文件夹.bat
libsigrokdecode4DSL/: decoder.c  libsigrokdecode.h
pv/cdecoders/: c_decoder_api.h  c_decoder_registry.cpp  c_decoder_registry.h
pv/cdecoders/example_spi/: CMakeLists.txt  README.md  spi_c_decoder.c
scripts/: build_and_run.sh  extract_translations.py  macos_build_image_run.sh  merge_translations.py  package-macos.sh  rebuild_dsview_icns.sh  relaunch-dsview.sh  replace_ls_macro.py  translation_map.json
scripts/linux/: build_and_run.sh  install_udev_rules.sh  package-linux.sh
scripts/macOS/: add_new_translations.py  build_and_run.sh  extract_translations.py  fill_missing_translations.py  generate_ts.py  macos_build_image_run.sh  merge_translations.py  package-macos.sh  rebuild_dsview_icns.sh  relaunch-dsview.sh  replace_ls_macro.py
scripts/misc/: add_new_translations.py  extract_translations.py  fill_missing_translations.py  generate_ts.py  merge_translations.py  rebuild_px_tool_icns.sh  replace_ls_macro.py  translation_map.json
scripts/windows/: BUILD.bat  CLEAR_ICON_CACHE.bat  FULL_BUILD.bat  RUN_DSVIEW.bat  build_script.sh  deploy_script.sh
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css
(+256 files in other folders)
